tests/src/frontend/typechecking/invalid/frozen_preservation_invalid_field.sk
mutable base class P<+T: mutable Ref<Int>> final (v: T)
mutable class C extends P<mutable Ref<Int>>

fun no(): void {
  c = C(Ref(0));
  p: P<mutable Ref<Int>> = c;
  p.v.set(42) // modyfing an immutable object!
}
